# ocaml-graphql-example

./: dune  server.opam
